metadata/sf-prod/force-app/main/default/objects/Case/fields/Closed_Won_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Closed_Won_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Opportunity that triggered the creation of this case. The opportunity was Closed-Won and the customer contract was thereby renewed, but negative customer sentiment was observed during the renewal process.</description>
    <inlineHelpText>The Opportunity that triggered the creation of this case. The opportunity was Closed-Won and the customer contract was thereby renewed, but negative customer sentiment was observed during the renewal process.</inlineHelpText>
    <label>Current Renewal Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>