metadata/sf-prod/force-app/main/default/objects/Case/fields/Next_Renewal_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Next_Renewal_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Next Renewal Opportunity for the Contract.</inlineHelpText>
    <label>Next Renewal Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Cases (Next Renewal Opportunity)</relationshipLabel>
    <relationshipName>Cases1</relationshipName>
    <type>Lookup</type>
</CustomField>