metadata/sf-prod/force-app/main/default/objects/Case/fields/Self_Serve_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Self_Serve_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Field populated through automation when email-to-case generates an Self-Serve Query case</description>
    <inlineHelpText>Related Opportunity record</inlineHelpText>
    <label>Self-Serve Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Cases (Self-Serve Opportunity)</relationshipLabel>
    <relationshipName>Self_Serve_Oppys</relationshipName>
    <type>Lookup</type>
</CustomField>