metadata/sf-prod/force-app/main/default/objects/Case/recordTypes/Proactive_Win_Back.recordType-meta.xml
<RecordType>
    <fullName>Proactive_Win_Back</fullName>
    <active>true</active>
    <businessProcess>Proactive Win-Back</businessProcess>
    <label>Proactive Win-Back</label>
</RecordType>