metadata/sf-prod/force-app/main/default/objects/Case/recordTypes/Self_Serve_Queries.recordType-meta.xml
<RecordType>
    <fullName>Self_Serve_Queries</fullName>
    <active>true</active>
    <businessProcess>Self-Serve Queries</businessProcess>
    <description>Record type to log Self-Serve Cases</description>
    <label>Self-Serve Queries</label>
</RecordType>