metadata/sf-prod/force-app/main/default/objects/Case/listViews/CSM_Queue_Case.listView-meta.xml
<ListView>
    <fullName>CSM_Queue_Case</fullName>
    <columns>CASES.ORIGIN</columns>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Queue</filterScope>
    <label>CSM Queue</label>
    <queue>CSM_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>