metadata/sf-prod/force-app/main/default/objects/Case/listViews/CSM_Queue_Sococo.listView-meta.xml
<ListView>
    <fullName>CSM_Queue_Sococo</fullName>
    <columns>CASES.ORIGIN</columns>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Queue</filterScope>
    <filters>
        <field>CASES.ORIGIN</field>
        <operation>contains</operation>
        <value>success@sococo.com,sales@sococo.com,customer.success@sococo.com,ar@sococo.com,finance@sococo.com,info@sococo.com</value>
    </filters>
    <label>CSM Queue - Sococo</label>
    <queue>CSM_Queue</queue>
</ListView>