metadata/sf-prod/force-app/main/default/objects/Case/listViews/Open_PWB_Cases.listView-meta.xml
<ListView>
    <fullName>Open_PWB_Cases</fullName>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>Closed_Won_Opportunity__c</columns>
    <columns>CASES.PRIORITY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.ORIGIN</field>
        <operation>equals</operation>
        <value>Proactive Win-Back</value>
    </filters>
    <filters>
        <field>CASES.CLOSED</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Open PWB Cases</label>
</ListView>