metadata/sf-prod/force-app/main/default/objects/Case/listViews/Self_Serve_Queue_Case.listView-meta.xml
<ListView>
    <fullName>Self_Serve_Queue_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Self-Serve Queue</label>
    <queue>Self_Serve_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>